# world-clock-mac

./: index.html  package.json  pnpm-lock.yaml  timezone-compare.jsx
.github/workflows/: release.yml
docs/: architecture.md  development.md  features.md  release.md
docs/worklog/: 2026-04-16.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CityCard.tsx  Settings.tsx  StarField.tsx  TimeSlider.tsx
src/hooks/: useClock.ts  useUpdater.ts
src/lib/: cities.ts  palette.ts  time.ts
src/styles/: global.css
