[package]
name = "world-clock-mac"
version = "0.1.0"
description = "World Clock menu bar app"
authors = ["chanheekim"]
edition = "2021"

[lib]
name = "world_clock_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
